fix gap on pagination

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
         @apply bg-purple-500 hover:bg-purple-700 inline-block my-2 px-4 py-2 mx-3 uppercase rounded-md cursor-pointer font-bold text-white hover:text-white
     }
     .btn-page {
-        @apply bg-purple-500 hover:bg-purple-700 inline-block my-2 px-4 py-2 uppercase rounded-md cursor-pointer font-bold text-white hover:text-white
+        @apply bg-purple-500 hover:bg-purple-700 inline-block my-2 px-4 py-2 mx-2 uppercase rounded-md cursor-pointer font-bold text-white hover:text-white
     }
     a {
         color: #a855f7;
